# LearnPro

./: .coverage  .env-sample  Dockerfile  README.md  docker-compose.yml  payment_fixture.json  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
materials/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_lesson_course.py  0003_alter_lesson_course.py  0004_alter_lesson_course.py  0005_alter_course_preview_alter_lesson_preview.py  0006_course_owner_lesson_owner.py  0007_alter_course_owner_alter_lesson_owner.py  0008_alter_course_owner_alter_lesson_owner.py  0009_subscription.py  0010_rename_courses_subscription_course_and_more.py  0011_course_updated_ad_lesson_updated_ad.py  0012_rename_updated_ad_course_updated_at_and_more.py
nginx/: Dockerfile  Dockerfile.nginx  nginx.conf
nginx/html/: index.html
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: admin.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_options_alter_payments_paid_course_and_more.py  0004_alter_customuser_is_staff_and_more.py  0005_alter_customuser_is_staff.py  0006_alter_payments_paid_course.py  0007_alter_payments_paid_course.py  0008_payments_link_payments_session_id.py  0009_alter_payments_link_alter_payments_session_id.py  0010_alter_payments_user.py  0011_alter_customuser_last_login.py  0012_alter_customuser_last_login.py
