[tool.poetry]
name = "homeworkdrf"
version = "0.1.0"
description = ""
authors = ["Nurlan-Grachyov <nurlan.grachyov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
djangorestframework = "^3.15.2"
pillow = "^11.1.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.1"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.0"
drf-yasg = "^1.21.10"
stripe = "^12.0.0"
requests = "^2.32.3"
forex-python = "^1.8"
ipython = "^9.1.0"
celery = "^5.5.1"
django-celery-beat = "^2.7.0"
pytz = "^2025.2"
redis = "^5.2.1"
coverage = "^7.8.0"
mypy = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
